--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
                             <a class="menu-item" href="#earn">Earn</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#ownland">Ownland</a>
+                            <a class="menu-item" href="#own_lands">Ownland</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#nft_market">Nft market</a>
+                            <a class="menu-item" href="#characters_weapons">Nft market</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#token">Token</a>
+                            <a class="menu-item" href="#token_utilities">Token</a>
                         </li>
                         <li class="item">
                             <a class="menu-item" href="#roadmap">Roadmap</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#team">Team</a>
+                            <a class="menu-item" href="#our_team">Team</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#partner">Partner</a>
+                            <a class="menu-item" href="#partnersss">Partner</a>
                         </li>
                         <li class="item">
                             <a class="menu-item" href="#connect_wallet">Connect Wallet</a>
@@ -81,22 +81,22 @@
                                             <a class="menu-item" href="#earn">Earn</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#ownland">Ownland</a>
+                                            <a class="menu-item" href="#own_lands">Ownland</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#nft_market">Nft market</a>
+                                            <a class="menu-item" href="#characters_weapons">Nft market</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#token">Token</a>
+                                            <a class="menu-item" href="#token_utilities">Token</a>
                                         </li>
                                         <li class="item">
                                             <a class="menu-item" href="#roadmap">Roadmap</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#team">Team</a>
+                                            <a class="menu-item" href="#our_team">Team</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#partner">Partner</a>
+                                            <a class="menu-item" href="#partnersss">Partner</a>
                                         </li>
                                         <li class="item">
                                             <a class="menu-item btn_header" href="#connect_wallet">Connect Wallet</a>
@@ -122,7 +122,7 @@
                             </div>
 
                             <div id="about" class="section section-about section-2">
-                                <div class="about-image" data-aos="fade-right" data-aos-offset="500">
+                                <div class="about-image" data-aos="fade-right" data-aos-offset="200">
                                     <img src="./assets/images/pose8b.png" alt="">
                                 </div>
                                 <div class="about-content">
@@ -130,7 +130,7 @@
                                     <div class="title-line img-bg " data-aos="zoom-in" data-aos-delay="100"></div>
                                     <p data-aos="fade-up" data-aos-delay="200">Last Survivor is a metaverse project based on blockchain technology. Your goal is to be the last on the battlefield to win the game. Last Survivor is the newest</p>
                                 </div>
-                                <div class="about-image" data-aos="fade-left" data-aos-offset="500">
+                                <div class="about-image" data-aos="fade-left" data-aos-offset="200">
                                     <img src="./assets/images/pose7.png" alt="">
                                 </div>
                             </div>
@@ -310,7 +310,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="characters_weapons_right">
-                                                    <div class="img_box">
+                                                    <div class="img_box" data-aos="fade-up" data-aos-delay="0" data-aos-offset="200">
                                                         <img src="./assets/images/pose1 2.png">
                                                     </div>
                                                     <div class="content_box">
@@ -384,7 +384,7 @@
                                     </div>
                                  </div>
 
-                                <div id="" class="section section-10">
+                                <div id="roadmap" class="section section-10">
                                     <div class="container">
                                         <div class="container-inner">
                                             <h3 class="section-title" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">ROADMAP</h3>
@@ -666,22 +666,22 @@
                                                     <a class="menu-item" href="#earn" data-aos="fade-up" data-aos-delay="300" data-aos-offset="100">Earn</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#ownland" data-aos="fade-up" data-aos-delay="400" data-aos-offset="100">Ownland</a>
+                                                    <a class="menu-item" href="#own_lands" data-aos="fade-up" data-aos-delay="400" data-aos-offset="100">Ownland</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#nft_market" data-aos="fade-up" data-aos-delay="500" data-aos-offset="100">Nft market</a>
+                                                    <a class="menu-item" href="#characters_weapons" data-aos="fade-up" data-aos-delay="500" data-aos-offset="100">Nft market</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#token" data-aos="fade-up" data-aos-delay="600" data-aos-offset="100">Token</a>
+                                                    <a class="menu-item" href="#token_utilities" data-aos="fade-up" data-aos-delay="600" data-aos-offset="100">Token</a>
                                                 </li>
                                                 <li class="item">
                                                     <a class="menu-item" href="#roadmap" data-aos="fade-up" data-aos-delay="700" data-aos-offset="100">Roadmap</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#team" data-aos="fade-up" data-aos-delay="800" data-aos-offset="100">Team</a>
+                                                    <a class="menu-item" href="#our_team" data-aos="fade-up" data-aos-delay="800" data-aos-offset="100">Team</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#partner" data-aos="fade-up" data-aos-delay="900" data-aos-offset="100">Partner</a>
+                                                    <a class="menu-item" href="#partnersss" data-aos="fade-up" data-aos-delay="900" data-aos-offset="100">Partner</a>
                                                 </li>
                                                 <li class="item">
                                                     <a class="menu-item btn_header" href="#connect_wallet" data-aos="fade-up" data-aos-delay="1000" data-aos-offset="100">Connect Wallet</a>
