change text Last Survivor from design

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div class="about-content">
                                     <h3 class="section-title " data-aos="fade-up" data-aos-delay="0">About Battle Lands</h3>
                                     <div class="title-line img-bg " data-aos="zoom-in" data-aos-delay="100"></div>
-                                    <p data-aos="fade-up" data-aos-delay="200">Last Survivor is a metaverse project based on blockchain technology. Your goal is to be the last on the battlefield to win the game. Last Survivor is the newest</p>
+                                    <p data-aos="fade-up" data-aos-delay="200">Battle Lands is a metaverse project based on blockchain technology. Your goal is to be the last on the battlefield to win the game. Battle Lands is the newest</p>
                                 </div>
                                 <div class="about-image" data-aos="fade-left" data-aos-offset="200">
                                     <img src="./assets/images/pose7.png" alt="">
