--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="./assets/css/main.css" data-n-g="">
         <noscript data-n-css=""></noscript>
         <script src="./assets/js/custom.js"></script>
-        <script type="text/javascript" src="./assets/js/main.js"></script>
+        <script src="./assets/js/main.js"></script>
         
     </head>
     <body>
