--- a/index.html
+++ b/index.html
@@ -769,6 +769,15 @@
         
     </body>
     <script>
+
+        var myVideo = document.getElementById("sectionBanner-video");
+        function playPause() {
+            if (myVideo.paused) {
+                myVideo.play();
+            } else {
+                myVideo.pause();
+            }
+        } 
     </script>
 </html>
 
