--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             
-                            <!--<div class="background-t">-->
+                            <div class="background-t">
                                 <div id="invest-to-earn" class="section section-5">
                                     <img src="./assets/images/section-5-bg.png" alt="" class="bg-overlay">
                                     <div class="container">
@@ -703,7 +703,7 @@
                                             </div>
                                     </div>
                                 </div>
-                            <!--</div>-->
+                            </div>
 
                             <footer class="section">
                                 <img src="./assets/images/Group 2863802.png" class="vector">
