--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="item-roamap" data-aos="fade-left" data-aos-duration="500" data-aos-delay="0" data-aos-offset="200">
+                                                    <div class="item-roamap roadmap-selected" data-aos="fade-left" data-aos-duration="500" data-aos-delay="0" data-aos-offset="200">
                                                         <h4 class="title" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="150">Phase 2</h4>
                                                         <ul class="list">
                                                             <li data-aos="zoom-in" data-aos-delay="200" data-aos-offset="150">Design & prototype development</li>
