--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <!-- <h3 class="section-title">Game Teaser</h3> -->
                                 <div class="trailer-wrapper">
                                     <div class="video">
-                                        <img src=https://img.youtube.com/vi/i2pfSnxAAJM/maxresdefault.jpg alt='Kingdom Quest: The Beginning' class="image-video">
+                                        <img src=./assets/images/section-1-bg.png alt='Battle Lands - Metaverse Project - Battle Royale Game' class="image-video">
                                         <video id="sectionBanner-video" muted loop>
                                             <source src="./assets/images/BattleLand_Teaser_16.9.mp4">
                                         </video>
