--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="menu-item" href="#our_team">Team</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#partnersss">Partner</a>
+                            <a class="menu-item" href="#partners">Partner</a>
                         </li>
                         <li class="item">
                             <a class="menu-item" href="#connect_wallet">Connect Wallet</a>
@@ -96,7 +96,7 @@
                                             <a class="menu-item" href="#our_team">Team</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#partnersss">Partner</a>
+                                            <a class="menu-item" href="#partners">Partner</a>
                                         </li>
                                         <li class="item">
                                             <a class="menu-item btn_header" href="#connect_wallet">Connect Wallet</a>
@@ -765,7 +765,7 @@
                                                     <a class="menu-item" href="#our_team" data-aos="fade-up" data-aos-delay="800" data-aos-offset="100">Team</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#partnersss" data-aos="fade-up" data-aos-delay="900" data-aos-offset="100">Partner</a>
+                                                    <a class="menu-item" href="#partners" data-aos="fade-up" data-aos-delay="900" data-aos-offset="100">Partner</a>
                                                 </li>
                                                 <li class="item">
                                                     <a class="menu-item btn_header" href="#connect_wallet" data-aos="fade-up" data-aos-delay="1000" data-aos-offset="100">Connect Wallet</a>
