--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                                                 <li class="" ><i class="item" data-aos="fade-right" data-aos-delay="100"></i> <a data-aos="zoom-in" data-aos-delay="100">Top leaderboard</a></li>
                                                                 <li class="" ><i class="item" data-aos="fade-right" data-aos-delay="200"></i> <a data-aos="zoom-in" data-aos-delay="200">Character rental</a></li>
                                                                 <li class="" ><i class="item" data-aos="fade-right" data-aos-delay="300"></i> <a data-aos="zoom-in" data-aos-delay="300">Staking</a></li>
-                                                                <li class="" ><i class="item" data-aos="fade-right" data-aos-delay="400"></i> <a data-aos="zoom-in" data-aos-delay="400">Marketing place</a></li>
+                                                                <li class="" ><i class="item" data-aos="fade-right" data-aos-delay="400"></i> <a data-aos="zoom-in" data-aos-delay="400">Marketplace</a></li>
                                                             </ul>
                                                             <span data-aos="fade-right" data-aos-delay="0" data-aos-offset="200"> Spending $BLC:</span>
                                                             <ul>
