--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="menu-item" href="#gameplay">Gameplay</a>
                         </li>
                         <li class="item">
-                            <a class="menu-item" href="#earn">Earn</a>
+                            <a class="menu-item" href="#invest-to-earn">Earn</a>
                         </li>
                         <li class="item">
                             <a class="menu-item" href="#own_lands">Ownland</a>
@@ -78,7 +78,7 @@
                                             <a class="menu-item" href="#gameplay">Gameplay</a>
                                         </li>
                                         <li class="item">
-                                            <a class="menu-item" href="#earn">Earn</a>
+                                            <a class="menu-item" href="#invest-to-earn">Earn</a>
                                         </li>
                                         <li class="item">
                                             <a class="menu-item" href="#own_lands">Ownland</a>
@@ -710,7 +710,7 @@
                                                     <a class="menu-item" href="#gameplay" data-aos="fade-up" data-aos-delay="200" data-aos-offset="100">Gameplay</a>
                                                 </li>
                                                 <li class="item">
-                                                    <a class="menu-item" href="#earn" data-aos="fade-up" data-aos-delay="300" data-aos-offset="100">Earn</a>
+                                                    <a class="menu-item" href="#invest-to-earn" data-aos="fade-up" data-aos-delay="300" data-aos-offset="100">Earn</a>
                                                 </li>
                                                 <li class="item">
                                                     <a class="menu-item" href="#own_lands" data-aos="fade-up" data-aos-delay="400" data-aos-offset="100">Ownland</a>
